ncmpc 0.18 - not yet released
* po: added Italian translation


ncmpc 0.17 - (06/22/2010)
* screen_queue: fix range selection check on "shuffle"
* screen_browser: check for error before adding song to playlist
* po: added Brazilian Portuguese translation


ncmpc 0.16.1 - (01/17/2009)
* screen_queue: always update the list size
* screen_browser: fixed jump to playlist file


ncmpc 0.16 - (12/25/2009)
* using libmpdclient 2.0 instead of built-in libmpdclient
* require MPD 0.12
* allow multiple queued database updates
* reactivate incremental playlist changes
* optimize "add+play song" with addid/playid
* handle stderr messages from lyrics plugins
* search: eliminate duplicate results
* use the "idle" command to reduce CPU and network usage
* disable the status bar clock by default
* list_window: fix narrow cursor drawing
* screen_play: repaint after the "select-playing" command
* screen_text: start searching at window origin, not bottom
* strfsong: support multiple values for a tag
* screen_browser: different colors for directories and playlists
* screen_browser: display song duration
* screen_queue: move ranges with one single "move" command
* status_bar: fix display_remaining_time while seeking
* status_bar: display elapsed time event when total time is unknown
* charset: added support for zero-width characters
* colors: added support for 256 colors and text attributes
* compatibility fixes for GLib 2.12


ncmpc 0.15 - 2009-09-24
* added the "lyrics-autosave" option
* added CMD_SELECT_PLAYING
* display song duration in the playlist
* added the "hardware_cursor" option
* show plugin error messages on the screen
* fixed NULL pointer dereference when not yet connected
* new translation: Hebrew


ncmpc 0.14 - 2009-04-21
  * bell on wrapped search (optionally)
  * added new "jump" ('.') command, which queries the user for a string and
    jumps to the entry which begins with that string while the user is typing.