@@ -1,4 +1,5 @@
 ncmpc 0.18 - not yet released
+* screen_song: show song range
 * po: added Italian translation
 
 
